--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,13 +19,17 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
     "framer-motion": "^10.0.1",
     "nanoid": "^3.3.6",
     "nodemon": "^2.0.20",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
@@ -34,9 +38,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
+    "test": "react-dotenv && react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -63,5 +67,8 @@
     "postcss": "^8.4.21",
     "react-beautiful-dnd": "^13.1.1",
     "tailwindcss": "^3.2.7"
+  },
+  "react-dotenv": {
+    "whitelist": ["API_KEY"]
   }
 }
