--- a/my-app/package.json
+++ b/my-app/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
+    "d3-force": "^3.0.0",
     "dotenv": "^16.0.3",
     "framer-motion": "^10.0.1",
     "nanoid": "^3.3.6",
@@ -33,6 +34,7 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "reactflow": "^11.7.0",
     "typescript": "^4.9.5",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
@@ -69,6 +71,8 @@
     "tailwindcss": "^3.2.7"
   },
   "react-dotenv": {
-    "whitelist": ["API_KEY"]
+    "whitelist": [
+      "API_KEY"
+    ]
   }
 }
