--- a/my-app/package.json
+++ b/my-app/package.json
@@ -31,6 +31,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-draggable": "^4.4.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
