--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hello-pangea/dnd": "^16.2.0",
     "@lottiefiles/react-lottie-player": "^3.5.2",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,7 @@
     "d3-force": "^3.0.0",
     "dotenv": "^16.0.3",
     "framer-motion": "^10.0.1",
+    "mobx-react-lite": "^3.4.3",
     "nanoid": "^3.3.6",
     "nodemon": "^2.0.20",
     "openai": "^3.2.1",
