--- a/configuration/buildspec-backend.yml
+++ b/configuration/buildspec-backend.yml
@@ -4,11 +4,7 @@ phases:
   pre_build:
     commands:
       - echo Zipping project folder...
-      - zip -r project.zip backend-flask/*
-  build:
-    commands:
-      - echo Moving ZIP file to deployment directory...
-      - mv project.zip deployment/
+      - zip -r deployment.zip backend-flask*
 artifacts:
   files:
-    - deployment/**
+    - deployment.zip
