--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -11,11 +11,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate deployment package
-        run: |
-          ls -la
-          cd backend-flask
-          zip -r deploy.zip . -x '*.git*'
-          ls -la
+        run: zip -r deploy.zip backend-flask -x '*.git*'
+
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v21
         with:
