--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -20,6 +20,6 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: skim-final2
           environment_name: Skim-final2-env
-          version_label: ${{ github.sha }}
+          version_label: skim-final2-version-3
           existing_bucket_name: elasticbeanstalk-ap-southeast-2-143184831020
           region: ap-southeast-2
