--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -23,3 +23,4 @@ jobs:
           version_label: skim-final2-version-3
           existing_bucket_name: elasticbeanstalk-ap-southeast-2-143184831020
           region: ap-southeast-2
+          deployment_package: deploy.zip
