--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -21,6 +21,7 @@ jobs:
           application_name: skim-final2
           environment_name: Skim-final2-env
           version_label: skim-final2-version-4
+          use_existing_version_if_available: 'true'
           existing_bucket_name: elasticbeanstalk-ap-southeast-2-143184831020
           region: ap-southeast-2
           deployment_package: deploy.zip
