--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -11,7 +11,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate deployment package
-        run: zip -r deploy-v3.zip backend-flask -x '*.git*'
+        run: cd .. && zip -r deploy-v4.zip backend-flask -x '*.git*'
+
+      - name: View package
+        run: cat deploy-v4.zip
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v21
@@ -23,4 +26,4 @@ jobs:
           version_label: ${{ github.sha }}
           existing_bucket_name: elasticbeanstalk-ap-southeast-2-143184831020
           region: ap-southeast-2
-          deployment_package: deploy-v3.zip
+          deployment_package: deploy-v4.zip
