--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -11,7 +11,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate deployment package
-        run: zip -r deploy-v4.zip backend-flask -x '*.git*'
+        run: cd /backend-flask; zip deploy-v4.zip *;
+
 
       - name: View package
         run: cat deploy-v4.zip
