--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate deployment package
-        run: cd backend-flask; zip deploy-v4.zip *;
+        run: cd backend-flask; zip ../deploy-v4.zip *;
 
 
       - name: View package
