--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -11,10 +11,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate deployment package
-        run: cd backend-flask; zip ../deploy-v5.zip *;
+        run: cd backend-flask; zip ../deploy-v6.zip *;
 
       - name: View package
-        run: zipinfo -1 myzipfile.zip
+        run: zipinfo -1 deploy-v6.zip
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v21
@@ -26,4 +26,4 @@ jobs:
           version_label: ${{ github.sha }}
           existing_bucket_name: elasticbeanstalk-ap-southeast-2-143184831020
           region: ap-southeast-2
-          deployment_package: deploy-v5.zip
+          deployment_package: deploy-v6.zip
