--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -11,19 +11,19 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate deployment package
-        run: cd backend-flask; zip -r deploy-v7.zip . -x "scripts/*"; mv ./deploy-v7.zip ..
+        run: cd backend-flask; zip -r deploy.zip . -x "scripts/*"; mv ./deploy.zip ..
 
       - name: View package
-        run: zipinfo -1 deploy-v7.zip
+        run: zipinfo -1 deploy.zip
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v21
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: skim-final2
-          environment_name: Skim-final2-env
+          application_name: skimify-backend
+          environment_name: Skimify-backend-env
           version_label: ${{ github.sha }}
-          existing_bucket_name: elasticbeanstalk-ap-southeast-2-143184831020
+          existing_bucket_name: ${{ secrets.BUCKET_NAME }}
           region: ap-southeast-2
-          deployment_package: deploy-v7.zip
+          deployment_package: deploy.zip
