--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -24,6 +24,6 @@ jobs:
           application_name: skimify-backend
           environment_name: Skimify-backend-env
           version_label: ${{ github.sha }}
-          existing_bucket_name: ${{ secrets.BUCKET_NAME }}
+          existing_bucket_name: elasticbeanstalk-ap-southeast-2-035137729911
           region: ap-southeast-2
           deployment_package: deploy.zip
