added PROD db url

--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -4,4 +4,5 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
 COPY . .
+ENV DB_URL=${DB_URL}
 CMD ["gunicorn", "-b", "0.0.0.0:80", "app:create_app()"]
