--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -5,4 +5,4 @@ COPY requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
 COPY . .
 ENV DB_URL=${DB_URL}
-CMD ["gunicorn", "-b", "0.0.0.0:80", "app:create_app()"]
+CMD ["gunicorn", "-w", "2", "-b", "0.0.0.0:80", "app:create_app()"]
