added env vars to docker file

--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -4,5 +4,11 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
 COPY . .
-ENV DB_URL=${DB_URL}
+ENV DB_URL=${DB_URL} \
+  JWT_KEY=${JWT_KEY} \
+  REDIS_HOST=${REDIS_HOST} \
+  REDIS_PORT=${REDIS_PORT} \
+  REDIS_USERNAME=${REDIS_USERNAME} \
+  open_ai_api_key=${open_ai_api_key}
+
 CMD ["gunicorn", "-w", "2", "-b", "0.0.0.0:80", "app:create_app()"]
