--- a/my-app/package.json
+++ b/my-app/package.json
@@ -25,6 +25,7 @@
     "d3-force": "^3.0.0",
     "dotenv": "^16.0.3",
     "framer-motion": "^10.0.1",
+    "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
     "nanoid": "^3.3.6",
     "nodemon": "^2.0.20",
