--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -1,10 +1,12 @@
-name: Deploy Backend to AWS Elastic Beanstalk
+name: Deploy Backend and Frontend to AWS
+
 on:
   push:
     branches:
       - 'main'
+
 jobs:
-  deploy:
+  deploy_backend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
@@ -27,3 +29,31 @@ jobs:
           existing_bucket_name: ${{ secrets.BUCKET_NAME }}
           region: ap-southeast-2
           deployment_package: deploy.zip
+
+  deploy_frontend:
+    needs: deploy_backend
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '19.8.1'
+
+      - name: Install dependencies and build
+        run: |
+          cd my-app
+          npm ci
+          npm run build
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Sync build artifacts to S3
+        run: aws s3 sync ./my-app/build s3://${{ secrets.AWS_PRODUCTION_BUCKET_NAME }} --delete
