--- a/.github/workflows/deploy-eb.yml
+++ b/.github/workflows/deploy-eb.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies and build
         run: |
           cd my-app
-          npm ci
+          npm install
           npm run build
 
       - name: Configure AWS credentials
