--- a/my-app/package.json
+++ b/my-app/package.json
@@ -46,7 +46,7 @@
   },
   "scripts": {
     "start": "react-dotenv && react-scripts start",
-    "build": "react-dotenv && react-scripts build",
+    "build": "react-dotenv && CI=false && react-scripts build",
     "test": "react-dotenv && react-scripts test",
     "eject": "react-scripts eject"
   },
