--- a/my-app/package.json
+++ b/my-app/package.json
@@ -30,7 +30,6 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-dotenv": "^0.1.3",
     "react-draggable": "^4.4.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
@@ -41,9 +40,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
-    "build": "react-dotenv && CI=false && react-scripts build",
-    "test": "react-dotenv && react-scripts test",
+    "start": "react-scripts start",
+    "build": "CI=false && react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -70,10 +69,5 @@
     "postcss": "^8.4.21",
     "react-beautiful-dnd": "^13.1.1",
     "tailwindcss": "^3.2.7"
-  },
-  "react-dotenv": {
-    "whitelist": [
-      "API_KEY"
-    ]
   }
 }
